# shadertoy5000

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/exe/: CMakeLists.txt
src/exe/shadertoy/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/fsutil/: CMakeLists.txt  FileWatcher.cpp  FileWatcher.h
src/lib/qtwin/: CMakeLists.txt  Constants.h  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  RenderWidget.h  Shader.hpp
src/lib/qtwin/shaders/: fragment.glsl  raytracer.glsl  vertex.glsl
src/shaders/: basic_fragment.glsl  sphere.glsl
